Basic_html_tags
Contains some initial practice

--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is Shikhar Dave</h1>
-    <p>Hello , i am Shikhar Dave , a B.Tech pre-final year student at IIT Jodhpur.</p>
+    <h1>Books to read</h1>
+    <!--The below content will be changed in future.-->
+    <!--HTML is case insensitive language, caps and small both tags work-->
+    <p>There are a lot of books for you to read.</p>
+    <!--The below is an example of anchor tag-->
+    <!--href here is an attribute and you use = for the attribute refer-->
+    <a href="https://aman.ai/">Refer to the notes of Aman of courses</a>
+    <!--Example of relative link-->
+    <a href="/about.html">Go to the about section</a>
+    <hr>
+    <!--hr creates horizontal lines-->
+    <!--Image tag-->
+    <img src="https://images.unsplash.com/photo-1449034446853-66c86144b0ad?w=620&auto=format&fit=crop&q=60&ixlib=rb-4.0.3">
+    <!--bold,italic,underline-->
+    <b>This is bold </b>
+    <br>
+    <!--br tag is used for new line making-->
+    <i>This is the italics</i>
+    <br>
+    <u>This is underlined text</u>
+    <!--subscript and superscript-->
+    <p>C0<sub>2</sub></p>
+    <p>a <sup>2</sup>+bx+c</p>
+    <!--pre-->
+    <pre>
+        this means that:
+        1. Things will be rendered as it is written
+        2. Hello
+    </pre>
 </body>
 </html>
